infra/KeycloakOperator/resources/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-operator
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keycloak-operator
  template:
    metadata:
      labels:
        name: keycloak-operator
    spec:
      serviceAccountName: keycloak-operator
      containers:
        - name: keycloak-operator
          # Replace this with the built image name
          image: localhost:5001/keycloak/keycloak-operator:main
          command:
          - keycloak-operator
          imagePullPolicy: Always
